--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-
-    <script src="scripts/p5.js"></script>
-    <script src="scripts/p5.dom.js"></script>
     <script src="scripts/objects.js"></script>
     <script src="scripts/canvas.js"></script>
+    <script src="scripts/Parser.js"></script>
+    <script src="scripts/p5.js"></script>
+    <script src="scripts/p5.dom.js"></script>
     <script src="scripts/controller.js"></script>
 </body>
 
