Save and Load files

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <div class="col-3">
                         <button class="navbar-btn" id="limpiar">LIMPIAR</button>
                     </div>
+                    <input type="file" id="real-file" hidden="hidden">
                     <div class="col-3">
                         <button class="navbar-btn" id="guardar">GUARDAR</button>
                     </div>
